--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,17 @@ html {
 html body #root .App {
   /* full viewport height */
   min-height: 100vh;
+  overflow: hidden;
 }
 #root {
   height: 100vh;
 }
 ::-webkit-scrollbar {
   width: 0;
+}
+body,
+html {
+  overflow: hidden;
 }
 button {
   background-color: rgba(0, 0, 0, 0);
@@ -22,9 +27,13 @@ button {
 .app {
   height: 100vh;
   width: 100vw;
-  display: grid;
-  grid-template-rows: 7.48rem 1fr;
-  grid-template-areas: "header" "behind";
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  background-color: #f0f2f5;
+  overflow: hidden;
+  flex-flow: column;
+  justify-content: stretch;
   /*定义滚动条轨道 内阴影+圆角*/
   /*定义滑块 内阴影+圆角*/
   /*定义最上方和最下方的按钮*/
@@ -48,13 +57,12 @@ button {
   grid-area: header;
 }
 .app .behind {
-  position: relative;
   width: 100%;
-  grid-area: behind;
   display: flex;
-  flex-direction: row;
-  overflow: hidden;
-  background-color: #f0f2f5;
+  flex-direction: column;
+  overflow: auto;
+  background-color: transparent;
+  flex: auto;
 }
 .app .behind .loginContainer {
   position: absolute;
@@ -63,14 +71,52 @@ button {
   top: 50%;
   z-index: 99999;
 }
-.app .behind .main {
-  background-color: #f0f2f5;
-  width: 100%;
-}
 .app .bottom {
+  flex-grow: 0;
   height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f0f2f5;
+  background-color: transparent;
+  grid-area: bottom;
+}
+.app .bContainer-enter {
+  overflow: hidden;
+  height: 0vh;
+}
+.app .bContainer-enter-active {
+  height: 7.48rem;
+  transition: 300ms;
+}
+.app .bContainer-exit {
+  height: 7.48rem;
+}
+.app .bContainer-exit-active {
+  height: 0rem;
+  transition: 300ms;
+  overflow: hidden;
+}
+.app .bContainer-exit-done {
+  height: 0rem;
+  overflow: hidden;
+}
+.app .calContainer-enter {
+  overflow: hidden;
+  width: 0vw;
+}
+.app .calContainer-enter-active {
+  width: 100vw;
+  transition: 300ms;
+}
+.app .calContainer-exit {
+  width: 100vw;
+}
+.app .calContainer-exit-active {
+  width: 0vw;
+  transition: 300ms;
+  overflow: hidden;
+}
+.app .calContainer-exit-done {
+  width: 0vw;
+  overflow: hidden;
 }
