--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -3,7 +3,7 @@
 .topBarOuter .left,
 .topBarOuter .left .titleOuter,
 .topBarOuter .left .menu {
-  background-color: black;
+  background-color: transparent;
 }
 .basicFlex,
 .topBarOuter,
@@ -27,10 +27,56 @@
   justify-content: center;
 }
 .topBarOuter .left .menu .active {
+  background-color: #ffc11f;
+  color: white;
   transition: 300ms;
 }
 .topBarOuter .right {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
+}
+.tContainer {
+  background: black;
+  position: static;
+}
+.hometCotainer {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  position: absolute;
+}
+.tContainer-exit {
+  background: rgba(0, 0, 0, 0.5);
+}
+.tContainer-exit-active {
+  background: black;
+  position: absolute;
+  transition: 300ms;
+}
+.tContainer-exit-done {
+  background: black;
+  position: static;
+  transition: 300ms;
+}
+.tContainer-enter {
+  background: black;
+}
+.tContainer-enter-active {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  transition: 300ms;
+}
+.tContainer-enter-done {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  position: absolute;
 }
