--- a/src/App.less
+++ b/src/App.less
@@ -120,6 +120,11 @@ button {
     overflow: hidden;
   }
 
+  .calContainer{
+    overflow: hidden;
+    width: 0vw;
+  }
+
   .calContainer-enter {
     overflow: hidden;
     width: 0vw;
