--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@ button {
   height: 0rem;
   overflow: hidden;
 }
+.app .calContainer {
+  overflow: hidden;
+  width: 0vw;
+}
 .app .calContainer-enter {
   overflow: hidden;
   width: 0vw;
