--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
+  align-items: center;
 }
 .tContainer {
   background: black;
