--- a/src/App.less
+++ b/src/App.less
@@ -52,7 +52,7 @@ button {
   /*定义滑块 内阴影+圆角*/
   ::-webkit-scrollbar-thumb {
     border-radius: 3px;
-    background-color: #2fb9f4;
+    background-color: #ffc11f;
   }
 
   /*定义最上方和最下方的按钮*/
