--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ button {
   cursor: pointer;
   outline: none;
 }
+img[src=""],
+img:not([src]) {
+  opacity: 0;
+}
 .app {
   height: 100vh;
   width: 100vw;
